Fix layout problems

--- a/src/components/Stepper/Stepper.module.css
+++ b/src/components/Stepper/Stepper.module.css
@@ -7,6 +7,7 @@
 }
 
 .stepperItem {
+  position: relative;
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -14,35 +15,42 @@
   align-items: center;
 }
 
-.iconArea {
+.borderLine {
+  position: absolute;
+  top: 12px; /* Center the line with the 24px icon (12px from top) */
+  right: 0;
+  left: 0;
+  z-index: 1;
   display: flex;
   flex-direction: row;
-  align-self: stretch;
-  justify-content: center;
-  width: 100%;
+  align-items: center;
+}
+
+.iconSpacer {
+  flex-shrink: 0;
+  width: 24px;
 }
 
 .leftBorder,
 .rightBorder {
   display: flex;
   flex: 1;
-  flex-direction: column;
-  gap: 10px;
-  align-self: stretch;
-  justify-content: center;
+  align-items: center;
 }
 
-.leftBorder.hidden,
-.rightBorder.hidden {
+.border.hidden {
   display: none;
 }
 
 .border {
+  width: 100%;
   height: 2px;
   background-color: #f6f6f6;
 }
 
 .iconWrapper {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-shrink: 0;
   align-items: center;
@@ -66,6 +74,7 @@
 }
 
 .currentCircle {
+  position: relative;
   width: 24px;
   height: 24px;
   background-color: #3959cc;
@@ -75,7 +84,7 @@
 .undoneCircle {
   width: 24px;
   height: 24px;
-  background-color: transparent;
+  background-color: #fff;
   border: 2px solid #f6f6f6;
   border-radius: 50%;
 }
